[package]
name = "trapezoidal_1d"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
log = "0.4.8"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlDivElement',
  'HtmlElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'Event'
]

[dependencies.trajectory-planner]
path = "../trajectory-planner"
